# Software_Design_Pattern

./: README.md
Abstrac/: README.md
Mediator/: .gitignore  CMakeLists.txt  README.md
Mediator/doc/: Mediator.graphml
Mediator/include/: Katilimci.h  Moderator.h  NormalKatilimci.h  Oda.h  YazilimOdasi.h
Mediator/src/: Katilimci.cpp  Moderator.cpp  NormalKatilimci.cpp  Oda.cpp  YazilimOdasi.cpp  main.cpp
Singleton/: README.md  Singleton.cpp  Singleton_2.cpp
Singleton/Singleton/: CMakeLists.txt  Singleton.cpp  Singleton.h  main.cpp
Visitor/: .gitignore  CMakeLists.txt  README.md
Visitor/include/: Control.h  ControlsVisitor.h  IVisitor.h  StatefullVisitor.h
Visitor/src/: Control.cpp  ControlsVisitor.cpp  StatefullVisitor.cpp  main.cpp
